--- a/css/join.css
+++ b/css/join.css
@@ -39,6 +39,9 @@ header {
   background-color: #e7ecf1;
   border-radius: 50px;
 }
+.box1 a{
+  color: #333;
+}
 .box2 {
   padding: 5%;
   width: 30%;
@@ -48,7 +51,9 @@ header {
   border-radius: 50px;
   color: #fff;
 }
-
+.box2 a {
+  color: #fff;
+}
 i {
   width: 100%;
   display: block;
@@ -78,10 +83,10 @@ i {
     border-radius: 50px;
     color: #fff;
   }
-  i {
+   i {
     font-size: 5vw;
   }
-  .join h2 {
+   .join h2 {
     font-size: 3vw;
     font-weight: 800;
     text-align: center;
@@ -137,7 +142,7 @@ i {
     font-size: 10vw;
     margin: 0 auto;
   }
-  footer{
+  footer {
     width: 100%;
     height: 470px;
   }
