--- a/css/login.css
+++ b/css/login.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* 로그인 */
+/* 지우기 */
 /* 폰트 */
 @font-face {
   font-family: "UhBeeSe_hyun";
@@ -19,42 +19,62 @@
   font-family: "KBO-Dia-Gothic_bold";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2304-2@1.0/KBO-Dia-Gothic_bold.woff") format("woff");
 }
+/* 공통 */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+body {
+  font-family: "KBO-Dia-Gothic_light", sans-serif;
+  font-size: 16px;
+  /* padding: 25px; */
+  background-color: #ffff;
+  color: #333;
+  text-align: center;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
 /* 테두리 강조 스타일 */
 .focused {
-  border: 2px solid #007bff;
   outline: none; /* 포커스 테두리 제거 */
 }
 .error {
-  line-height: 3;
+  display: block;
+  height: 10px;
   color: red;
   font-size: 13px;
+  margin-top: 10px;
 }
-.logingform {
-  margin-top: 150px;
-  margin-bottom: 50px;
-}
+
 .logingform h1 {
   font-size: 3vw;
-  margin-bottom: 10%;
+  margin-bottom: 3%;
+
+  margin-top: 10%;
 }
 .login {
   padding-top: 3%;
+  padding-bottom: 5%;
   margin: 0 auto;
-  width: 30%;
-  height: 130%;
-  background-color: #e7ecf1;
-  display: block;
-  border-radius: 20px;
 }
+
+.check {
+  padding: 30px;
+  font-size: 17px;
+}
+
 form > input {
   padding-left: 5%;
-  position: relative;
   display: block;
-  outline: none;
-  width: 65%;
-  height: 5vh;
+  width: 25%;
+  height: 50px;
   text-align: left;
-
 border-radius: 7px;
   margin: 0 auto;
 
@@ -65,176 +85,114 @@ border-radius: 7px;
 form .loginbutton {
   display: block;
   margin: 0 auto;
-  margin-top: 20px;
+  padding: 15px;
+  width: 25%;
+  border-radius: 7px;
+  background-color: #134aa9;
+  cursor: pointer;
   border: none;
 }
-form .check {
-  margin: 20px 0;
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-form button {
-  margin: 0 auto;
-  display: block;
-  padding: 3%;
-  width: 60%;
+form .joinbutton {
+  margin-top: 20px;
+  width: 25%;
+  padding: 15px;
   border: none;
   border-radius: 7px;
   background-color: #134aa9;
-  color: #fff;
-  font-size: 1vw;
   cursor: pointer;
-  line-height: 1;
+  border: none;
 }
-form button a {
+form .loginbutton a {
   color: #fff;
-  text-decoration: none;
+  font-size: 16px;
 }
-.loginbutton {
-  margin-top: 3%;
+form .joinbutton a {
+  color: #fff;
+  font-size: 16px;
 }
-.joinbutton {
-  margin-top: 10px;
+.icon {
+  padding: 20px;
 }
+
 .icon img {
-  display: inline;
-  width: 10%;
-  margin: 5%;
-}
-/* 반응형 */
-@media screen and (max-width: 1300px) {
-  .login {
-    width: 50%;
-  }
-  .logingform h1 {
-    font-size: 5vw;
-    margin-top: 5%;
-  }
-  form button {
-    font-size: 1.5vw;
-  }
-  .error {
-    line-height: 3;
-    color: red;
-    font-size: 13px;
-  }
-  .icon img {
-    display: inline;
-    width: 10%;
-    margin: 5%;
-  }
+  width: 50px;
+  margin: 20px;
 }
 @media screen and (max-width: 768px) {
-  .error {
-    line-height: 2;
-    color: red;
-    font-size: 13px;
-  }
-  .login {
-    width: 50%;
+  form > input {
+    width: 40%;
   }
   .logingform h1 {
     font-size: 5vw;
-    margin-top: 5%;
+    margin-bottom: 6%;
   }
-  form button {
-    font-size: 2vw;
+  form .loginbutton {
+    width: 40%;
   }
+  form .joinbutton {
+    width: 40%;
+  }
+  .icon {
+    padding: 20px;
+  }
+
   .icon img {
-    display: inline;
-    width: 12%;
-    margin: 5%;
+    width: 50px;
+    margin: 20px;
   }
 }
 @media screen and (max-width: 480px) {
   .logingform h1 {
-    font-size: 5vw;
+    font-size: 8vw;
     margin-bottom: 10%;
   }
   .login {
-    padding-top: 3%;
+    padding-top: 15%;
+    padding-bottom: 5%;
     margin: 0 auto;
-    width: 50%;
-    height: 130%;
-    display: block;
-    background-color: #fff;
   }
-  .error {
-    line-height: 2;
-    color: red;
-    font-size: 13px;
+  form .loginbutton {
+    width: 60%;
   }
-  .login {
-    width: 70%;
-  }
-  .logingform h1 {
-    font-size: 6vw;
-    margin-top: 10%;
-  }
-  form button {
-    font-size: 3vw;
-  }
-  .icon img {
-    display: inline;
-    width: 20%;
-    margin: 2%;
-    padding: 4%;
-  }
-  form .check {
-    margin: 15px 0;
-    font-size: 14px;
+  form .joinbutton {
+    width: 60%;
   }
   form > input {
-    padding-left: 5%;
-    position: relative;
-    display: block;
-    width: 80%;
-    height: 5vh;
-    text-align: left;
-    margin: 0 auto;
-    margin-top: 20px;
-    border: 1px solid #134aa9;
-  }
-  form > button {
-    margin: 0 auto;
-    display: block;
-    padding: 6%;
-    width: 80%;
-    border: none;
-    border-radius: 7px;
-    background-color: #134aa9;
-    color: #fff;
-    font-size: 1vw;
-    cursor: pointer;
-    line-height: 1;
-  }
-  form > button a {
-    font-size: 16px;
-    color: #fff;
-    text-decoration: none;
-  }
-  .icon {
-    display: inline-block;
+    width: 60%;
   }
 }
+
 @media screen and (max-width: 320px) {
-  .error {
-    line-height: 2;
-    color: red;
-    font-size: 13px;
+  .logingform h1 {
+    font-size: 10vw;
+    margin-bottom: 15%;
   }
   .login {
-    width: 70%;
+    padding-top: 30%;
+    margin: 0 auto;
   }
-  .logingform h1 {
-    font-weight: bold;
+  form .loginbutton {
+    width: 60%;
   }
-  form button {
-    font-size: 4vw;
+  form .joinbutton {
+    width: 60%;
   }
-  footer {
-    width: 100%;
-    height: 420px;
+  form > input {
+    width: 60%;
+  }
+  .icon {
+    padding: 20px;
+  }
+
+  .icon img {
+    width: 40px;
+    margin: 10px;
+  }
+  .error {
+    font-size: 10px;
+  }
+  .check {
+    padding: 15px;
+    font-size: 17px;
   }
 }
