--- a/css/minju.css
+++ b/css/minju.css
@@ -1,32 +1,39 @@
 @charset "utf-8";
 /* flying baneer */
 /* 신청하기 버튼 */
-/* .pop-button {
+body {
   position: relative;
+}
+.pop-button {
+  position: absolute;
+  width: 80px;
   position: fixed;
-  right: 0%;
+  right: 10px;
   bottom: 75%;
   z-index: 99999;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.pop-button img {
-  width: 50%;
+.pop-button a {
+  width: 100%;
+}
+.pop-button .chat-btn img {
+  width: 100%;
 }
 .pop-button span {
   font-family: "KBO-Dia-Gothic_light";
   position: absolute;
   top: 38px;
-  left: 32%;
+  left: 13px;
   color: #fff;
   z-index: 9999999;
 }
 .pop-button .chat-btn {
-  animation: updown 1.5s infinite; */
-/* -webkit-animation:updown 1.5s infinite; */
-/* 다른 브라우저에서도 작동 될 수 있게 하기 위해 -webkit을 사용. */
-/* }
+  animation: updown 1.5s infinite;
+  -webkit-animation: updown 1.5s infinite;
+  /* 다른 브라우저에서도 작동 될 수 있게 하기 위해 -webkit을 사용. */
+}
 .top-button {
   position: relative;
   z-index: 999999;
@@ -36,7 +43,7 @@
   display: block;
   position: fixed;
   bottom: 68%;
-  right: 2.5%;
+  right: 20px;
   background: #fff;
   box-shadow: none;
   border-radius: 50%;
@@ -45,7 +52,8 @@
   text-align: center;
   border: 1px solid #fff;
 }
-.top-btn img {
+
+.top-button .top-btn img {
   width: 100%;
 }
 .top-button .top-btn img {
@@ -55,7 +63,7 @@
   transform: rotate(0deg);
 }
 /* 애내메이션 효과 */
-/* @keyframes updown {
+@keyframes updown {
   0% {
     transform: translatey(0);
   }
@@ -65,7 +73,7 @@
   100% {
     transform: translatey(0);
   }
-}  */
+}
 /* =============================================== */
 /* 민주 */
 .inner {
@@ -209,6 +217,7 @@ footer .left .tell {
   font-family: "KBO-Dia-Gothic_medium";
 }
 footer .left button {
+  font-size: 16px;
   width: 130px;
   height: 50px;
   margin: 20px 5px;
@@ -220,14 +229,24 @@ footer .left button {
   border-radius: 7px;
 }
 /* ================================================ */
-/* 참여하기 */
+/* 신청하기 하단 */
+#bt-menu {
+  width: 100%;
+  position: fixed;
+  bottom: -50px;
+  transition: bottom 0.3s ease-in-out;
+  display: none;
+  z-index: 9999;
+}
 .takejoin .heart {
   width: 100%;
+  height: 50px;
   background-color: #134aa9;
   color: #fff;
   border: none;
-  font-size: 2vw;
+  font-size: 5vw;
   display: none;
+  font-family: "KBO-Dia-Gothic_light";
 }
 /* =================================================== */
 @media screen and (max-width: 1870px) {
@@ -237,36 +256,30 @@ footer .left button {
   }
 }
 /* =================================================== */
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1500px) {
   .snsImage-btn1 {
-    right: 650px;
+    display: none;
   }
   .section4 .snstext {
-    padding-top: 15%;
+    display: none;
+  }
+  .section4 .nanumsns-swiper {
+    width: 100%;
   }
 }
 /* ===================================================== */
 @media screen and (max-width: 1300px) {
   .animated-title {
-    padding: 4%;
+    padding: 6%;
     margin-top: -4%;
     margin-bottom: 0%;
   }
   footer .left img {
     width: 15%;
   }
-  .pop-button {
-    right: -1%;
-  }
 }
 /* ===================================================== */
 @media screen and (max-width: 859px) {
-  .pop-button {
-    right: -3%;
-  }
-  .snsImage-btn1 {
-    display: none;
-  }
   .section4 .snstext {
     padding-top: 30%;
   }
@@ -276,6 +289,14 @@ footer .left button {
   .section4 .snstext h1 {
     font-size: 3vw;
     font-weight: 800;
+  }
+  .animated-title {
+    padding: 8%;
+    margin-top: -6%;
+    margin-bottom: 1%;
+  }
+  .track .content img {
+    width: 200%;
   }
   footer {
     height: 500px;
@@ -356,10 +377,13 @@ footer .left button {
     padding: 2%;
     border-radius: 10%;
   }
-  .section5 .animated-title {
-    padding: 12%;
-    padding-top: 4%;
-    padding-bottom: -4%;
+  .animated-title {
+    padding: 8%;
+    margin-top: -6%;
+    margin-bottom: 2%;
+  }
+  .track .content img {
+    width: 200%;
   }
   footer {
     height: 450px;
@@ -420,24 +444,22 @@ footer .left button {
     margin-top: -15%;
     border-radius: 10%;
   }
-  .section5 .content img {
-    width: 100%;
+  .animated-title {
+    padding: 8%;
+    margin-top: -6%;
+    margin-bottom: 4%;
   }
-  .section5 .animated-title {
-    padding: 12%;
-    margin-top: -12%;
+  .track .content img {
+    width: 250%;
+  }
+  #bt-menu {
+    display: block;
   }
   .takejoin .heart {
     display: block;
-    width: 100%;
-    height: 50px;
-    background-color: #134aa9;
-    color: #fff;
-    border: none;
-    font-size: 5vw;
   }
   footer {
-    height: 480px;
+    height: 460px;
     width: 100%;
   }
   footer .right h1 {
@@ -451,12 +473,15 @@ footer .left button {
     text-align: left;
     color: #ffffff79;
   }
+
   footer .right p {
-    font-size: 13px;
+    margin-top: 5%;
     line-height: 1.5;
     text-align: left;
     letter-spacing: 1px;
     font-family: "KBO-Dia-Gothic_light";
+    color: #bbbbbb;
+    font-size: 13px;
   }
   footer .left {
     margin: 0 auto;
@@ -464,24 +489,26 @@ footer .left button {
     width: 100%;
   }
   footer .left .tell {
-    font-size: 8vw;
+    margin-top: 5%;
+    font-size: 6vw;
+    color: #bbb;
     text-align: center;
-    margin-top: 4%;
     font-family: "KBO-Dia-Gothic_medium";
   }
   footer .left img {
-    width: 8%;
+    width: 6%;
+    filter: brightness(0.7);
   }
   footer .left button {
     border-radius: 7px;
     width: 130px;
     height: 50px;
-    margin: 20px 5px;
+    margin: 30px 5px;
     background-color: #333;
-    border: 1px solid #fff;
-    color: #fff;
+    border: 1px solid #bbbbbb;
+    color: #bbb;
     font-family: "KBO-Dia-Gothic_light";
-    letter-spacing: 2px;
+    font-size: 13px;
   }
 }
 /* ==================================================== */
@@ -510,17 +537,17 @@ footer .left button {
     padding: 2%;
     border-radius: 10%;
   }
-  .section5 .content img {
-    width: 100%;
+  .track .content img {
+    width: 300%;
   }
-  .section5 .animated-title {
-    padding: 14%;
-    padding-top: -10%;
+  .animated-title {
+    padding: 12%;
+    margin-top: -6%;
+    margin-bottom: 4%;
   }
-
   footer {
     width: 100%;
-    height: 460px;
+    height: 420px;
   }
   footer .right h1 {
     font-family: "UhBeeSe_hyun";
@@ -539,6 +566,7 @@ footer .left button {
     text-align: left;
     letter-spacing: 1px;
     font-family: "KBO-Dia-Gothic_light";
+    color: #bbbbbb;
     font-size: 13px;
   }
   footer .left {
@@ -547,21 +575,24 @@ footer .left button {
     width: 100%;
   }
   footer .left .tell {
-    font-size: 8vw;
+    font-size: 6vw;
+    color: #bbb;
     text-align: center;
     font-family: "KBO-Dia-Gothic_medium";
   }
   footer .left img {
-    width: 10%;
+    width: 6%;
+    filter: brightness(0.7);
   }
   footer .left button {
     border-radius: 7px;
-    width: 130px;
+    width: 100px;
     height: 50px;
     margin: 20px 5px;
     background-color: #333;
-    border: 1px solid #fff;
-    color: #fff;
+    border: 1px solid #bbbbbb;
+    color: #bbb;
     font-family: "KBO-Dia-Gothic_light";
+    font-size: 13px;
   }
 }
