--- a/css/takejoin copy.css
+++ b/css/takejoin copy.css
@@ -40,6 +40,7 @@ input[type="email"]
   border-radius: 7px;
   padding: 10px;
   margin: 10px 0;
+  outline: none;
 }
 #buttons > li {
   display: inline-block;
@@ -47,12 +48,13 @@ input[type="email"]
 
 .r {
   line-height: 55px;
-  padding-right: 100px;
+  padding-right: 130px;
   margin: 0 auto;
   display: inline-block;
 }
+
 button {
-  width: 250px;
+  width: 200px;
   height: 50px;
   margin-right: 10px;
   border: 1px solid #134aa9;
@@ -67,18 +69,4 @@ button {
   font-size: 13px;
   text-align: center;
   padding-right: 25px;
-}
-/* .num {
-  width: 110px;
-  height: 35px;
-  border: 1px solid #134aa9;
-  border-radius: 7px;
-  padding: 10px;
-  margin: 10px 0px;
-  margin-right: 10px;
-  float: left;
-} */
-.focused {
-  border: 2px solid #007bff;
-  outline: none; /* 포커스 테두리 제거 */
 }
