--- a/css/takejoin copy.css
+++ b/css/takejoin copy.css
@@ -63,6 +63,9 @@ button {
   border-radius: 7px;
   color: #fff;
 }
+button a {
+  color: #fff;
+}
 .error {
   display: inline-block;
   color: red;
