--- a/css/takejoin.css
+++ b/css/takejoin.css
@@ -60,6 +60,9 @@ button {
   border-radius: 7px;
   color: #fff;
 }
+button a {
+  color: #fff;
+}
 .error {
   display: inline-block;
   color: red;
