--- a/css/takejoin copy.css
+++ b/css/takejoin copy.css
@@ -13,12 +13,13 @@ li {
 }
 #container {
   padding-top: 10%;
-  width: 600px;
+  width: 500px;
   margin: 0 auto;
 }
 #container h1 {
   font-size: 3vw;
-  padding: 5%;
+  margin-left: 40px;
+  margin-bottom: 10%;
 }
 .field {
   float: left;
@@ -31,8 +32,7 @@ li {
 }
 input[type="text"],
 input[type="password"],
-input[type="email"]
- {
+input[type="email"] {
   float: left;
   width: 350px;
   height: 35px;
@@ -48,11 +48,14 @@ input[type="email"]
 
 .r {
   line-height: 55px;
-  padding-right: 130px;
+  padding-right: 80px;
   margin: 0 auto;
   display: inline-block;
 }
-
+#buttons {
+  margin-top: 20px;
+  margin-left: 50px;
+}
 button {
   width: 200px;
   height: 50px;
@@ -72,4 +75,102 @@ button a {
   font-size: 13px;
   text-align: center;
   padding-right: 25px;
+}
+/* 반응형 */
+/* ========================================== */
+@media screen and (max-width: 768px) {
+  #container {
+    padding-top: 20%;
+    width: 500px;
+    margin: 0 auto;
+  }
+  #container h1 {
+    font-size: 5vw;
+
+    margin-left: 30px;
+    margin-bottom: 5%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #container {
+    padding-top: 30%;
+    width: 500px;
+    margin: 0 auto;
+  }
+  #container h1 {
+    font-size: 8vw;
+    margin-left: 20px;
+    margin-bottom: 10%;
+  }
+  input[type="text"],
+  input[type="password"],
+  input[type="email"] {
+    float: left;
+    width: 300px;
+    height: 35px;
+    border: 1px solid #134aa9;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 10px 0;
+    outline: none;
+  }
+  #buttons {
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+  button {
+    width: 150px;
+    height: 50px;
+    margin-right: 10px;
+    border: 1px solid #134aa9;
+    background: #134aa9;
+    font-size: 0.9em;
+    border-radius: 7px;
+    color: #fff;
+  }
+}
+@media screen and (max-width: 320px) {
+  #container {
+    padding-top: 40%;
+    width: 500px;
+    margin: 0 auto;
+  }
+  #container h1 {
+    font-size: 10vw;
+    padding: 0;
+    margin-right: 190px;
+    margin-bottom: 10%;
+  }
+  input[type="text"],
+  input[type="password"],
+  input[type="email"] {
+    float: left;
+    width: 180px;
+    height: 35px;
+    border: 1px solid #134aa9;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 10px 0;
+    outline: none;
+  }
+  .r {
+    line-height: 55px;
+    padding-right: 50px;
+    float: left;
+  }
+  #buttons {
+    margin-top: 30px;
+    margin-right: 150px;
+  }
+
+  button {
+    width: 100px;
+    height: 50px;
+    border: 1px solid #134aa9;
+    background: #134aa9;
+    font-size: 0.9em;
+    border-radius: 7px;
+    color: #fff;
+  }
 }
