--- a/css/takejoin.css
+++ b/css/takejoin.css
@@ -1,4 +1,6 @@
 @charset "utf-8";
+/* 테두리 강조 스타일 */
+
 * {
   padding: 0;
   margin: 0;
@@ -11,12 +13,13 @@ li {
 }
 #container {
   padding-top: 10%;
-  width: 600px;
+  width: 500px;
   margin: 0 auto;
 }
 #container h1 {
   font-size: 3vw;
-  padding: 5%;
+  margin-left: 40px;
+  margin-bottom: 10%;
 }
 .field {
   float: left;
@@ -37,21 +40,24 @@ input[type="email"] {
   border-radius: 7px;
   padding: 10px;
   margin: 10px 0;
-  float: left;
   outline: none;
 }
 #buttons > li {
   display: inline-block;
 }
 
-.r{
-    line-height: 55px;
-padding-right:100px;
-margin: 0 auto;
-display: inline-block;
+.r {
+  line-height: 55px;
+  padding-right: 80px;
+  margin: 0 auto;
+  display: inline-block;
+}
+#buttons {
+  margin-top: 20px;
+  margin-left: 50px;
 }
 button {
-  width: 250px;
+  width: 200px;
   height: 50px;
   margin-right: 10px;
   border: 1px solid #134aa9;
@@ -69,4 +75,102 @@ button a {
   font-size: 13px;
   text-align: center;
   padding-right: 25px;
+}
+/* 반응형 */
+/* ========================================== */
+@media screen and (max-width: 768px) {
+  #container {
+    padding-top: 20%;
+    width: 500px;
+    margin: 0 auto;
+  }
+  #container h1 {
+    font-size: 5vw;
+
+    margin-left: 30px;
+    margin-bottom: 5%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  #container {
+    padding-top: 30%;
+    width: 500px;
+    margin: 0 auto;
+  }
+  #container h1 {
+    font-size: 8vw;
+    margin-left: 20px;
+    margin-bottom: 10%;
+  }
+  input[type="text"],
+  input[type="password"],
+  input[type="email"] {
+    float: left;
+    width: 300px;
+    height: 35px;
+    border: 1px solid #134aa9;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 10px 0;
+    outline: none;
+  }
+  #buttons {
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+  button {
+    width: 150px;
+    height: 50px;
+    margin-right: 10px;
+    border: 1px solid #134aa9;
+    background: #134aa9;
+    font-size: 0.9em;
+    border-radius: 7px;
+    color: #fff;
+  }
+}
+@media screen and (max-width: 320px) {
+  #container {
+    padding-top: 50%;
+    width: 500px;
+    margin: 0 auto;
+  }
+  #container h1 {
+    font-size: 10vw;
+    padding: 0;
+    margin-right: 190px;
+    margin-bottom: 5%;
+  }
+  input[type="text"],
+  input[type="password"],
+  input[type="email"] {
+    float: left;
+    width: 180px;
+    height: 35px;
+    border: 1px solid #134aa9;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 10px 0;
+    outline: none;
+  }
+  .r {
+    line-height: 55px;
+    padding-right: 50px;
+    float: left;
+  }
+  #buttons {
+    margin-top: 30px;
+    margin-right: 150px;
+  }
+
+  button {
+    width: 100px;
+    height: 50px;
+    border: 1px solid #134aa9;
+    background: #134aa9;
+    font-size: 0.9em;
+    border-radius: 7px;
+    color: #fff;
+  }
 }
