--- a/css/takejoin copy.css
+++ b/css/takejoin copy.css
@@ -9,168 +9,92 @@
 ul,
 li {
   list-style: none;
-  clear: both;
 }
 #container {
-  padding-top: 10%;
-  width: 500px;
-  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  margin:200px auto;
+  max-width: 370px;
+  min-width:300px;
 }
 #container h1 {
+  position: relative;
   font-size: 3vw;
   margin-left: 40px;
   margin-bottom: 10%;
 }
-.field {
-  float: left;
-  width: 100px;
+#register {
+  position: relative;
+  margin: 0 auto;
+  width:100%;
+  padding:10px;
+  
+}
+#register ul {
+ 
+  background-color: azure;
+  width:100%;
+  margin: 0 auto;
   font-weight: bold;
   font-size: 0.9em;
-  line-height: 55px;
-  text-align: right;
-  margin-right: 15px;
 }
-input[type="text"],
-input[type="password"],
-input[type="email"] {
-  float: left;
-  width: 350px;
+#register ul li {
+  width: 100%;
+}
+#register ul li label{
+  display: inline-block;
+  width:25%;
+  text-align: right;
+  margin-right: 5px;
+  background-color: bisque;
+}
+#register ul li input
+{
+  width:70%;
   height: 35px;
   border: 1px solid #134aa9;
   border-radius: 7px;
   padding: 10px;
   margin: 10px 0;
   outline: none;
-}
-#buttons > li {
-  display: inline-block;
-}
-
-.r {
-  line-height: 55px;
-  padding-right: 80px;
-  margin: 0 auto;
-  display: inline-block;
-}
-#buttons {
-  margin-top: 20px;
-  margin-left: 50px;
-}
-button {
-  width: 200px;
-  height: 50px;
-  margin-right: 10px;
-  border: 1px solid #134aa9;
-  background: #134aa9;
-  font-size: 0.9em;
-  border-radius: 7px;
-  color: #fff;
-}
-button a {
-  color: #fff;
+  background-color: beige;
 }
 .error {
-  display: inline-block;
+  display:block;
   color: red;
   font-size: 13px;
   text-align: center;
-  padding-right: 25px;
+}
+#buttons{
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+}
+#buttons button{
+  margin: 0 auto;
+  width: 150px;
+  height: 40px;
+  border-radius: 7px;
+  border: none;
+  outline: none;
+  background-color: #134aa9;
+  text-align: center;
+  font-size: 0.9em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+#buttons button a{
+  color: #fff;
 }
 /* 반응형 */
 /* ========================================== */
 @media screen and (max-width: 768px) {
-  #container {
-    padding-top: 20%;
-    width: 500px;
-    margin: 0 auto;
-  }
-  #container h1 {
-    font-size: 5vw;
-
-    margin-left: 30px;
-    margin-bottom: 5%;
-  }
 }
 
 @media screen and (max-width: 480px) {
-  #container {
-    padding-top: 30%;
-    width: 500px;
-    margin: 0 auto;
-  }
-  #container h1 {
-    font-size: 8vw;
-    margin-left: 20px;
-    margin-bottom: 10%;
-  }
-  input[type="text"],
-  input[type="password"],
-  input[type="email"] {
-    float: left;
-    width: 300px;
-    height: 35px;
-    border: 1px solid #134aa9;
-    border-radius: 7px;
-    padding: 10px;
-    margin: 10px 0;
-    outline: none;
-  }
-  #buttons {
-    margin-top: 20px;
-    margin-left: 10px;
-  }
-  button {
-    width: 150px;
-    height: 50px;
-    margin-right: 10px;
-    border: 1px solid #134aa9;
-    background: #134aa9;
-    font-size: 0.9em;
-    border-radius: 7px;
-    color: #fff;
-  }
 }
-@media screen and (max-width: 320px) {
-  #container {
-    padding-top: 40%;
-    width: 500px;
-    margin: 0 auto;
-  }
-  #container h1 {
-    font-size: 10vw;
-    padding: 0;
-    margin-right: 190px;
-    margin-bottom: 10%;
-  }
-  input[type="text"],
-  input[type="password"],
-  input[type="email"] {
-    float: left;
-    width: 180px;
-    height: 35px;
-    border: 1px solid #134aa9;
-    border-radius: 7px;
-    padding: 10px;
-    margin: 10px 0;
-    outline: none;
-  }
-  .r {
-    line-height: 55px;
-    padding-right: 50px;
-    float: left;
-  }
-  #buttons {
-    margin-top: 30px;
-    margin-right: 150px;
-  }
 
-  button {
-    width: 100px;
-    height: 50px;
-    border: 1px solid #134aa9;
-    background: #134aa9;
-    font-size: 0.9em;
-    border-radius: 7px;
-    color: #fff;
-  }
+@media screen and (max-width: 320px) {
 }
