회원가입수정

--- a/css/takejoin copy.css
+++ b/css/takejoin copy.css
@@ -13,27 +13,24 @@ li {
 #container {
   position: relative;
   width: 100%;
-  margin:200px auto;
+  margin: 200px auto;
   max-width: 370px;
-  min-width:300px;
+  min-width: 300px;
 }
 #container h1 {
   position: relative;
-  font-size: 3vw;
+  font-size: 30px;
   margin-left: 40px;
   margin-bottom: 10%;
 }
 #register {
   position: relative;
   margin: 0 auto;
-  width:100%;
-  padding:10px;
-  
+  width: 100%;
+  padding: 10px;
 }
 #register ul {
- 
-  background-color: azure;
-  width:100%;
+  width: 100%;
   margin: 0 auto;
   font-weight: bold;
   font-size: 0.9em;
@@ -41,60 +38,60 @@ li {
 #register ul li {
   width: 100%;
 }
-#register ul li label{
+#register ul li label {
   display: inline-block;
-  width:25%;
+  width: 25%;
   text-align: right;
   margin-right: 5px;
-  background-color: bisque;
 }
-#register ul li input
-{
-  width:70%;
+#register ul li input {
+  width: 70%;
   height: 35px;
   border: 1px solid #134aa9;
   border-radius: 7px;
   padding: 10px;
   margin: 10px 0;
   outline: none;
-  background-color: beige;
 }
-.error {
-  display:block;
-  color: red;
-  font-size: 13px;
-  text-align: center;
+.btn{
+  margin-top: 20px;
 }
-#buttons{
+#buttons {
   margin: 0 auto;
   width: 100%;
   display: flex;
 }
-#buttons button{
+#buttons button {
   margin: 0 auto;
-  width: 150px;
+  width: 140px;
   height: 40px;
   border-radius: 7px;
   border: none;
   outline: none;
   background-color: #134aa9;
+  color: #fff;
   text-align: center;
   font-size: 0.9em;
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-#buttons button a{
+#buttons button a {
   color: #fff;
+}
+.error {
+  display: inline-block;
+  color: red;
+  font-size: 13px;
+  text-align: center;
 }
 /* 반응형 */
 /* ========================================== */
-@media screen and (max-width: 768px) {
-}
-
-@media screen and (max-width: 480px) {
-}
-
 @media screen and (max-width: 320px) {
+  #register ul{
+    font-size: 12px;
+  }
+  #buttons button {
+    font-size: 13px;
+  }
 }
