--- a/css/takejoin.css
+++ b/css/takejoin.css
@@ -19,7 +19,7 @@ li {
 }
 #container h1 {
   position: relative;
-  font-size: 2vw;
+  font-size: 30px;
   margin-left: 40px;
   margin-bottom: 10%;
 }
@@ -53,11 +53,8 @@ li {
   margin: 10px 0;
   outline: none;
 }
-.error {
-  display: block;
-  color: red;
-  font-size: 13px;
-  text-align: center;
+.btn{
+  margin-top: 20px;
 }
 #buttons {
   margin: 0 auto;
@@ -66,12 +63,13 @@ li {
 }
 #buttons button {
   margin: 0 auto;
-  width: 150px;
+  width: 140px;
   height: 40px;
   border-radius: 7px;
   border: none;
   outline: none;
   background-color: #134aa9;
+  color: #fff;
   text-align: center;
   font-size: 0.9em;
   display: flex;
@@ -81,13 +79,19 @@ li {
 #buttons button a {
   color: #fff;
 }
+.error {
+  display: inline-block;
+  color: red;
+  font-size: 13px;
+  text-align: center;
+}
 /* 반응형 */
 /* ========================================== */
-@media screen and (max-width: 768px) {
-}
-
-@media screen and (max-width: 480px) {
-}
-
 @media screen and (max-width: 320px) {
+  #register ul{
+    font-size: 12px;
+  }
+  #buttons button {
+    font-size: 13px;
+  }
 }
