--- a/css/sub2.css
+++ b/css/sub2.css
@@ -31,8 +31,9 @@ a {
   display: flex;
   max-width: 1100px;
   padding-top: 132px;
-  padding-bottom: 46px;
+  padding-bottom: 86px;
   justify-content: space-between;
+  
   /* background-color: rgb(255, 198, 123); */
 }
 
@@ -104,6 +105,8 @@ a {
   align-items: flex-start;
   padding: 25px 30px;
   gap: 19px;
+  text-align: left;
+  word-break: keep-all;
 }
 .info-box2 {
   position: relative;
@@ -210,6 +213,7 @@ a {
   margin-bottom: 45px;
   font-size: 15px;
   gap: 25px;
+  text-align: left;
 }
 .box2 .list {
   display: flex;
@@ -217,6 +221,11 @@ a {
 }
 .list-span {
   font-weight: 600;
+}
+.box2 hr {
+  background: rgb(221, 221, 221);
+  height: 1px;
+  border: 0;
 }
 .penalty {
   display: flex;
@@ -322,13 +331,25 @@ a {
 }
 
 }
-@media screen and (max-width: 768px) {
-  .info-inner p:nth-last-child(2) {
-    display: none;
+@media (max-width: 580px) {
+  .iframe-container{
+    aspect-ratio: 3 / 3; /* 가로 세로 비율 유지 */
   }
-  .info-inner p:last-child {
-    display: block;
-    text-align: left;
-    line-height: 20px;
+}
+@media (max-width: 450px) {
+  .info-inner{
+      font-size: 15px;
+    line-height: 21px;
   }
+}
+@media (max-width: 400px) {
+.info-box2 .p1 {
+  position: absolute;
+  top: 36px;
+  left: 34px;
+}
+.info-box2 .p2 {
+  top: 63px;
+  left: 34px;
+}
 }
