--- a/css/login.css
+++ b/css/login.css
@@ -48,6 +48,7 @@ a {
 /* 테두리 강조 스타일 */
 .focused {
   outline: none; /* 포커스 테두리 제거 */
+  border: 2px solid #134aa9;
 }
 .error {
   display: block;
@@ -165,6 +166,9 @@ form .joinbutton a {
   form > input {
     width: 60%;
   }
+}
+footer{
+  height: 300px;
 }
 
 @media screen and (max-width: 320px) {
