--- a/css/minju.css
+++ b/css/minju.css
@@ -9,7 +9,7 @@ body {
   width: 80px;
   position: fixed;
   right: 10px;
-  bottom:15%;
+  bottom: 15%;
   z-index: 99999;
   display: flex;
   flex-direction: column;
@@ -42,7 +42,7 @@ body {
   width: 60px;
   line-height: 55px;
   text-align: center;
-  border: 1px solid #fff;
+  /* border: 1px solid #fff; */
 }
 
 .top-button .top-btn img {
@@ -354,6 +354,9 @@ footer .left button {
     font-size: 5vw;
     font-weight: 800;
   }
+  .section4 .snstext a img {
+    width: 15%;
+  }
   .section4 .nanumsns-swiper {
     display: none;
   }
@@ -396,7 +399,7 @@ footer .left button {
   footer .left {
     float: left;
     margin: 8%;
-    margin-top: 6%;
+    margin-top: 10%;
   }
   footer .left .tell {
     display: block;
@@ -429,8 +432,11 @@ footer .left button {
     display: none;
   }
   .section4 .snstext h1 {
-    font-size: 8vw;
+    font-size: 6vw;
     font-weight: 800;
+  }
+  .section4 .snstext a img {
+    width: 15%;
   }
   .snsnanum {
     margin-top: -15%;
