--- a/css/list.css
+++ b/css/list.css
@@ -409,3 +409,18 @@ a {
   border-radius: 7px;
   background-color: #fff;
 }
+@media all and (max-width: 390px) {
+/* 섹션2 */
+.section2 {
+  margin-top: 100px;
+  /* margin-bottom: 150px; */
+}
+.section-tite {
+  font-size: 22px;
+  padding: 5%;
+}
+/* 카테고리 */
+.tab-nav-wrapper {
+  /* padding-bottom: 5%; */
+}
+}
