--- a/css/takejoin.css
+++ b/css/takejoin.css
@@ -49,8 +49,8 @@ li {
   font-size: 30px;
   text-align: center;
   color: #333;
-  margin-top: 10%;
-  margin-bottom: -10%;
+  margin-top:200px;
+  margin-bottom: -180px;
   font-weight: bold;
 }
 #register {
@@ -122,6 +122,13 @@ li {
   margin-bottom: 20px;
 }
 /* 반응형 */
+@media screen and (max-width: 768px){
+  .main {
+    font-size: 25px;
+    margin-top:150px;
+    margin-bottom: -180px;
+  }
+}
 /* ========================================== */
 @media screen and (max-width: 320px) {
   #register ul {
@@ -129,5 +136,10 @@ li {
   }
   #buttons button {
     font-size: 13px;
+  }
+  .main {
+    font-size: 25px;
+    margin-top:180px;
+    margin-bottom: -180px;
   }
 }
