--- a/css/takejoin copy.css
+++ b/css/takejoin copy.css
@@ -70,7 +70,7 @@ li {
 #register ul li label {
   display: inline-block;
   width: 25%;
-  text-align: right;
+  text-align: left;
   margin-right: 5px;
 }
 #register ul li input {
