--- a/css/login.css
+++ b/css/login.css
@@ -146,6 +146,9 @@ form .joinbutton a {
     width: 50px;
     margin: 20px;
   }
+  footer{
+    height: 450px;
+  }
 }
 @media screen and (max-width: 480px) {
   .logingform h1 {
@@ -168,7 +171,7 @@ form .joinbutton a {
   }
 }
 footer{
-  height: 300px;
+  height: 400px;
 }
 
 @media screen and (max-width: 320px) {
