--- a/css/takejoin.css
+++ b/css/takejoin.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .boxcontent::-webkit-scrollbar {
-  width: 10px; /* 스크롤바의 너비 */
+  width: 5px; /* 스크롤바의 너비 */
 }
 
 .boxcontent::-webkit-scrollbar-track {
@@ -9,20 +9,31 @@
 }
 
 .boxcontent::-webkit-scrollbar-thumb {
-  background-color: #134aa9; /* 스크롤바 썸의 배경색 */
+  background-color: #cccccc; /* 스크롤바 썸의 배경색 */
   border-radius: 5px; /* 스크롤바 썸의 모서리를 둥글게 만듭니다. */
 }
 
 .boxcontent::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* 마우스 호버 시 스크롤바 썸의 배경색 */
 }
+.boxcontent span{
+  color: #383838;
+  /* font-weight: 800; */
+
+}
 .boxcontent {
   width: 100%;
-  height: 100px; /* 스크롤이 필요한 높이 */
+  height: 200px; /* 스크롤이 필요한 높이 */
   overflow-y: scroll; /* 세로 스크롤만 보이도록 설정 */
   border: 1px solid #ccc;
   padding: 10px;
-  font-size: 13px;
+  font-size: 11px;
+  line-height: 1.5;
+  text-align: left;
+  letter-spacing: -0.5px;
+  color: #858585;
+
+
 }
 /* 테두리 강조 스타일 */
 .focused {
@@ -49,7 +60,7 @@ li {
   font-size: 30px;
   text-align: center;
   color: #333;
-  margin-top:200px;
+  margin-top:180px;
   margin-bottom: -180px;
   font-weight: bold;
 }
@@ -84,7 +95,7 @@ li {
   outline: none;
 }
 .btn {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 #buttons {
   margin: 0 auto;
@@ -116,8 +127,10 @@ li {
   text-align: center;
 }
 .check {
-  font-size: 17px;
+  display: flex;
+  font-size: 12px;
   font-weight: bold;
+  justify-content: center;
   margin-top: 10px;
   margin-bottom: 20px;
 }
